force-app/main/default/objects/Partnerships__c/Partnerships__c.object-meta.xml
<CustomObject>
    <label>Partnership</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partnerships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>