force-app/main/default/objects/Partnerships__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partnerships</relationshipLabel>
    <relationshipName>Partnerships</relationshipName>
    <type>Lookup</type>
</CustomField>