force-app/main/default/objects/Partnerships__c/fields/Attending_Note__c.field-meta.xml
<CustomField>
    <fullName>Attending_Note__c</fullName>
    <label>Attending Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>