force-app/main/default/objects/Partnerships__c/fields/Attending_Status__c.field-meta.xml
<CustomField>
    <fullName>Attending_Status__c</fullName>
    <label>Attending Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Not Attending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>