force-app/main/default/objects/Partnerships__c/fields/Conference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Conference_Notes__c</fullName>
    <label>Conference Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>