force-app/main/default/objects/Partnerships__c/fields/Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partnership_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>