force-app/main/default/objects/Partnerships__c/fields/Distribution_1__c.field-meta.xml
<CustomField>
    <fullName>Distribution_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Additional distribution contact</inlineHelpText>
    <label>Distribution 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partnerships</relationshipName>
    <type>Lookup</type>
</CustomField>