force-app/main/default/objects/Partnerships__c/fields/Distribution_2__c.field-meta.xml
<CustomField>
    <fullName>Distribution_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partnerships1</relationshipName>
    <type>Lookup</type>
</CustomField>