force-app/main/default/objects/Partnerships__c/fields/Distribution_3__c.field-meta.xml
<CustomField>
    <fullName>Distribution_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partnerships2</relationshipName>
    <type>Lookup</type>
</CustomField>