force-app/main/default/objects/Partnerships__c/fields/e_Republic_Lead__c.field-meta.xml
<CustomField>
    <fullName>e_Republic_Lead__c</fullName>
    <label>e.Republic Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alan</fullName>
            </value>
            <value>
                <fullName>Cathilea</fullName>
            </value>
            <value>
                <fullName>Julia</fullName>
            </value>
            <value>
                <fullName>Kecia</fullName>
            </value>
            <value>
                <fullName>Lindsay</fullName>
            </value>
            <value>
                <fullName>Mark</fullName>
            </value>
            <value>
                <fullName>Todd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>