force-app/main/default/objects/Partnerships__c/fields/Exhibitor_URL__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_URL__c</fullName>
    <label>Exhibitor URL</label>
    <type>Url</type>
</CustomField>