force-app/main/default/objects/Partnerships__c/fields/Exhibitors__c.field-meta.xml
<CustomField>
    <fullName>Exhibitors__c</fullName>
    <label>Exhibitors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>