force-app/main/default/objects/Partnerships__c/fields/Org_to_Us__c.field-meta.xml
<CustomField>
    <fullName>Org_to_Us__c</fullName>
    <label>Org to Us</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Logo Recognition</fullName>
            </value>
            <value>
                <fullName>Bonus Distribution</fullName>
            </value>
            <value>
                <fullName>Tickets</fullName>
            </value>
            <value>
                <fullName>Pre-Attendee List</fullName>
            </value>
            <value>
                <fullName>Post-Attendee List</fullName>
            </value>
            <value>
                <fullName>Email Blast or Email Outreach</fullName>
            </value>
            <value>
                <fullName>Program Ad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>