force-app/main/default/objects/Partnerships__c/fields/Partnership_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partnership Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partnerships</relationshipLabel>
    <relationshipName>Partnerships</relationshipName>
    <type>Lookup</type>
</CustomField>