force-app/main/default/objects/Partnerships__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Big 5 / Top Priority</fullName>
            </value>
            <value>
                <fullName>A-Level</fullName>
            </value>
            <value>
                <fullName>B-Level</fullName>
            </value>
            <value>
                <fullName>C-Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>