force-app/main/default/objects/Partnerships__c/fields/Re_visit_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Re_visit_Next_Year__c</fullName>
    <label>Re-visit Next Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>