force-app/main/default/objects/Partnerships__c/fields/Special_Deliverables_OTU__c.field-meta.xml
<CustomField>
    <fullName>Special_Deliverables_OTU__c</fullName>
    <inlineHelpText>&quot;Org to Us&quot; Special Deliverables</inlineHelpText>
    <label>Special Deliverables (OTU)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>