force-app/main/default/objects/Partnerships__c/fields/Special_Deliverables_UTO__c.field-meta.xml
<CustomField>
    <fullName>Special_Deliverables_UTO__c</fullName>
    <inlineHelpText>&quot;Us to Org&quot; Special Deliverables</inlineHelpText>
    <label>Special Deliverables (UTO)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>