force-app/main/default/objects/Partnerships__c/fields/Staff_Attending__c.field-meta.xml
<CustomField>
    <fullName>Staff_Attending__c</fullName>
    <inlineHelpText
  >Enter in each staff member attending the event, separated by commas.</inlineHelpText>
    <label>Staff Attending</label>
    <type>TextArea</type>
</CustomField>