force-app/main/default/objects/Partnerships__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Pursuing: Partnership we want but don&apos;t have in place
In Progress: In the middle of negotiating
Confirmed: Signed agreement in place and need to deliver on committme
Trade Not Pursued: Decided against
Cancelled: Terminated Agreement by both parties</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pursuing</fullName>
                <default>true</default>
                <label>Pursuing</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Trade Not Pursued</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>