force-app/main/default/objects/Partnerships__c/fields/Tickets__c.field-meta.xml
<CustomField>
    <fullName>Tickets__c</fullName>
    <description>Number of tickets</description>
    <label>Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>