force-app/main/default/objects/Partnerships__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partnership / Trade</fullName>
            </value>
            <value>
                <fullName>Informal Agreement</fullName>
            </value>
            <value>
                <fullName>Non-Partner / Tradeshow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>