force-app/main/default/objects/Partnerships__c/fields/Us_to_Org__c.field-meta.xml
<CustomField>
    <fullName>Us_to_Org__c</fullName>
    <label>Us to Org</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Print Ad</fullName>
            </value>
            <value>
                <fullName>Online Ads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>