force-app/main/default/objects/Partnerships__c/listViews/X2017_Partnerships_ALL.listView-meta.xml
<ListView>
    <fullName>X2017_Partnerships_ALL</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Event_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Platform__c</columns>
    <columns>e_Republic_Lead__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2017</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2017</value>
    </filters>
    <label>2017 Partnerships: ALL</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>